[package]
name = "payments"
version = "0.1.0"
authors = ["Vance Longwill <vance@evren.co.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rust_decimal = "1.10.3"
serde = { version = "1", features = ["derive"] }
csv = "1.1"
anyhow = "1.0"
thiserror = "1.0"
